# claudine

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  MIGRATION.md  README.md  SECURITY.md  agent-init-prompt.md  entrypoint.sh  setup-home.sh
.github/workflows/: dependency-review.yml
docs/: implementation.md  issues.md
docs/issues/: 002-plugin-support.md  003-config-dir-platform-difference.md  004-multi-repo-projects.md  005-security-review.md  006-plugin-remove-dependency-check.md
src/: cli.rs  config.rs  devcontainer.rs  docker.rs  init.rs  layer.rs  main.rs  migrate.rs  plugin.rs  project.rs  repo.rs  resolve.rs
tests/: layer_validate.rs
